--- a/new_BlockIoT/Procfile
+++ b/new_BlockIoT/Procfile
@@ -1,1 +1,4 @@
 web: gunicorn app:dashboard
+worker: python3.8 main.py
+worker: geth --dev --ipcpath ~/Library/Ethereum/geth.ipc
+worker: ipfs daemon
